[gd_scene load_steps=7 format=1]

[ext_resource path="res://JetpackGameMode/PauseScreen/PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://Fonts/OrbitronBlack72.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Fonts/OrbitronMedium30.fnt" type="BitmapFont" id=3]
[ext_resource path="res://CommonScenes/Button.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.25098, 0.0901961, 0.454902, 1 )
light_color = Color( 0, 0.960784, 1, 1 )
dark_color = Color( 0.25098, 0.0901961, 0.454902, 1 )
border_size = 0
border_blend = false
draw_bg = true

[sub_resource type="StyleBoxFlat" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 1, 0.227451, 0.172549, 1 )
light_color = Color( 0, 0.960784, 1, 1 )
dark_color = Color( 0.25098, 0.0901961, 0.454902, 1 )
border_size = 0
border_blend = false
draw_bg = true

[node name="PauseScreen" type="Node2D"]

process/pause_mode = 2
script/script = ExtResource( 1 )

[node name="ColorFrame" type="ColorFrame" parent="."]

visibility/opacity = 0.6
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1920.0
margin/bottom = 1080.0
color = Color( 0.25098, 0.054902, 0.160784, 1 )

[node name="Pause" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 815.0
margin/top = 337.0
margin/right = 1106.0
margin/bottom = 423.0
custom_fonts/font = ExtResource( 2 )
text = "PAUSE"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Resume" type="Button" parent="."]

process/pause_mode = 2
focus_neighbour/top = NodePath("../Quit")
focus_neighbour/bottom = NodePath("../Replay")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 845.0
margin/top = 473.0
margin/right = 1075.0
margin/bottom = 552.0
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0.960784, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.960784, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Resume"
flat = false
script/script = ExtResource( 4 )

[node name="Replay" type="Button" parent="."]

process/pause_mode = 2
focus_neighbour/top = NodePath("../Resume")
focus_neighbour/bottom = NodePath("../Tutorial")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 845.0
margin/top = 577.0
margin/right = 1075.0
margin/bottom = 656.0
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0.960784, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.960784, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Restart"
flat = false
script/script = ExtResource( 4 )

[node name="Tutorial" type="Button" parent="."]

process/pause_mode = 2
focus_neighbour/top = NodePath("../Replay")
focus_neighbour/bottom = NodePath("../Options")
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 845.0
margin/top = 681.0
margin/right = 1075.0
margin/bottom = 760.0
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0.960784, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.960784, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "How to Play"
flat = false
script/script = ExtResource( 4 )

[node name="Options" type="Button" parent="."]

process/pause_mode = 2
focus_neighbour/top = NodePath("../Tutorial")
focus_neighbour/bottom = NodePath("../Quit")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 845.0
margin/top = 785.0
margin/right = 1075.0
margin/bottom = 864.0
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0.960784, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.960784, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = false
script/script = ExtResource( 4 )

[node name="Quit" type="Button" parent="."]

process/pause_mode = 2
focus_neighbour/top = NodePath("../Options")
focus_neighbour/bottom = NodePath("../Resume")
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 845.0
margin/top = 889.0
margin/right = 1075.0
margin/bottom = 968.0
custom_styles/hover = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_hover = Color( 0, 0.960784, 1, 1 )
custom_colors/font_color_pressed = Color( 0, 0.960784, 1, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false
script/script = ExtResource( 4 )

[connection signal="pressed" from="Resume" to="." method="_on_resume_pressed"]

[connection signal="pressed" from="Replay" to="." method="_on_replay_pressed"]

[connection signal="pressed" from="Tutorial" to="." method="_on_tutorial_pressed"]

[connection signal="pressed" from="Options" to="." method="_on_options_pressed"]

[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]


